# practice

./: .clang-format  caffe_note.cpp  data_struct.cpp
.github/workflows/: ci.yml
cpp/: _attribute_test.c  caffe_note.cpp  cast.cpp  data_struct.cpp  dfs.cpp  explicit.cpp  l_r_move.cpp  quick_sort.cpp  rotation_array.cpp  rw_file.cpp  search_number.cpp  sum_two_nums.cpp
cpp/boost_test/test0/: CMakeLists.txt  scoped_ptr.cpp
cpp/library_system/: CMakeLists.txt  library.cpp  library.h  main.cpp  students.cpp  students.h
cpp/sechdule_simulator/: modules.h
cpp/tengine_test/: Makefile  scale_bias.txt  scale_weight.txt  table_minmax.scale
cpp/xtensor_test/: CMakeLists.txt  main.cpp
cpp/xtensor_test/ops/: conv.hpp
library_system/: CMakeLists.txt  library.cpp  library.h  main.cpp  students.cpp  students.h
python/: get_overlap_from.py  mid_num.py  quick_sort.py  swap_ababa2babaa.py  test_all_.py  yeild.py
python/leetcode/: 无重复字符的最长子串.py
python/object/: dir_getattr.py
python/scripts/: autobuild.sh  cfgt_process.py  ci_cppcheck_codequality.py  ci_release.py  get_cycle.py  init_python.py  remove_headers.py  show_npy.py  yaml_process.py
