cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
include_directories(3rdparty)
include_directories(3rdparty/xflens)
include_directories(3rdparty/xtensor/include)
include_directories(3rdparty/xtl/include) 
include_directories(3rdparty/xtensor-blas 3rdparty/xflens)
include_directories(ops)
add_executable(demo main.cpp)
